--- a/Star wars/Code/estilo.css
+++ b/Star wars/Code/estilo.css
@@ -86,7 +86,7 @@ body{
     width: 800px;
     background-color: #050500;
     padding: 50px 40px 50px 40px  ;
-    margin: 0 30px;
+    margin: 0 35px;
     box-sizing: border-box;
     box-shadow: 0 0 35px #000;
     text-align: center;
@@ -103,4 +103,11 @@ body{
     padding: 10px 10px;
     letter-spacing: 0.5px;
     margin-top: 75px;
+}
+.Pelicula__Link{
+    text-decoration: none;
+}
+.Pelicula__Link:hover{
+    box-sizing: border-box;
+    box-shadow: 0 0 40px #f00;
 }
