The font of the letter for the portfolio is changed

--- a/Portafolio/fonts.css
+++ b/Portafolio/fonts.css
@@ -1,5 +1,4 @@
 @font-face {
-    font-family: "AnekDevanagari";
-    src: url("../fonts/AnekDevanagari-VariableFont_wdth\,wght.ttf");
-    font-weight: 600;
+    font-family: "Bilter";
+    src: url("../fonts/Bitter-Black.ttf");
 }
