--- a/Star Wars/Css/Header.css
+++ b/Star Wars/Css/Header.css
@@ -26,6 +26,7 @@
     font-size: 2.4em;
     letter-spacing: 1px;
     font-weight: 600;
+    padding-left: 5px;
 }
 .Cabecera--page div a{
     text-decoration: none;
