--- a/Star Wars/Page/Estilo.css
+++ b/Star Wars/Page/Estilo.css
@@ -22,7 +22,7 @@ main{
     left: 100px;
     width: 50%;
     height: 86%;
-    border: 1px solid #fff;
+    border: 1px solid var(--SecondaryColor);
     background-color: var(--PrimaryColor);
     border-radius: 25px;
     color: var(--FontColor);
