--- a/Star Wars/Page/Estilo.css
+++ b/Star Wars/Page/Estilo.css
@@ -29,6 +29,8 @@ main{
     padding: 15px;
     display: flex;
     justify-content: left;
+    align-items: center;
+    flex-flow: column wrap;
 }
 main .Peliculas{
     height: 205px;
@@ -105,4 +107,90 @@ main .Peliculas article:nth-child(2) div img:hover{
 main .Peliculas article:nth-child(2) div p{
     letter-spacing: 1px;
     font-size: 0.9em;
+}
+main .History{
+    width: 95%;
+    height: 215px;
+    padding: 5px;
+    display: flex;
+    gap: 15px;
+    margin-top: 0;
+    position: relative;
+    top: -15px;
+}
+main .History article{
+    border-bottom: 1px solid var(--HoverColor);
+    border-top: 1px solid var(--HoverColor);
+    width: 220px;
+    height: 205px;
+    text-wrap: pretty;
+    padding: 5px;
+    border-radius: 15px;
+}
+main .History article h2{
+    font-size: 1.3em;
+    letter-spacing: 2px;
+    text-align: center;
+    text-shadow: 0px 0px 3px var(--PrimaryColor);
+    font-style: italic;
+    margin-bottom: 5px;
+}
+main .History article p{
+    text-align: justify;
+    font-size: 1em;
+}
+main .History article p::first-letter{
+    font-size: 1.2em;
+    color: var(--HoverColor);
+}
+main .Personajes{
+    border: 1px solid #fff;
+    width: 90%;
+    height: 80px;
+    padding: 5px;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    gap: 15px;
+}
+main .Personajes article:nth-child(1){
+    border: 1px solid #fff;
+    width: 145px;
+    display: flex;
+    flex-flow: column wrap;
+    padding: 5px;
+    justify-content: center;
+    align-items: center;
+}
+main .Personajes article:nth-child(1) div{
+    display: flex;
+    gap: 10px;
+}
+main .Personajes article h2{
+    font-size: 1.5em;
+    letter-spacing: 1px;
+    font-style: italic;
+}
+main .Personajes article:nth-child(2){
+    border: 1px solid #fff;
+    width: 100%;
+    height: 70px;
+    padding: 5px;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    padding-left: 10px;
+    overflow-x: auto;
+    overflow-y: auto;
+    scroll-behavior: smooth;
+}
+main .Personajes article:nth-child(2)::-webkit-scrollbar{
+    display: none;
+}
+main .Personajes article img{
+    width: 76px;
+    border-radius: 35px;
+    text-align: center;
+    border: 1px solid var(--SecondaryColor);
+    transition: .1s linear;
 }
