--- a/Star Wars/Page/Estilo.css
+++ b/Star Wars/Page/Estilo.css
@@ -165,6 +165,7 @@ main .Personajes article:nth-child(1){
 main .Personajes article:nth-child(1) div{
     display: flex;
     gap: 10px;
+    cursor: pointer;
 }
 main .Personajes article h2{
     font-size: 1.5em;
