--- a/Star Wars/Page/Estilo.css
+++ b/Star Wars/Page/Estilo.css
@@ -116,13 +116,13 @@ main .History{
     gap: 15px;
     margin-top: 0;
     position: relative;
-    top: -15px;
+    top: -20px;
 }
 main .History article{
     border-bottom: 1px solid var(--HoverColor);
     border-top: 1px solid var(--HoverColor);
     width: 220px;
-    height: 205px;
+    height: 220px;
     text-wrap: pretty;
     padding: 5px;
     border-radius: 15px;
@@ -144,18 +144,19 @@ main .History article p::first-letter{
     color: var(--HoverColor);
 }
 main .Personajes{
-    border: 1px solid #fff;
-    width: 90%;
+    width: 92%;
     height: 80px;
     padding: 5px;
     display: flex;
     justify-content: left;
     align-items: center;
-    gap: 15px;
+    gap: 25px;
+    position: relative;
+    top: 10px;
 }
 main .Personajes article:nth-child(1){
-    border: 1px solid #fff;
     width: 145px;
+    border-radius: 10px;
     display: flex;
     flex-flow: column wrap;
     padding: 5px;
@@ -169,13 +170,15 @@ main .Personajes article:nth-child(1) div{
 }
 main .Personajes article h2{
     font-size: 1.5em;
-    letter-spacing: 1px;
+    letter-spacing: 2px;
     font-style: italic;
 }
 main .Personajes article:nth-child(2){
-    border: 1px solid #fff;
     width: 100%;
-    height: 70px;
+    height: 80px;
+    border-left: 2px solid var(--HoverColor);
+    border-bottom: 2px solid var(--HoverColor);
+    border-radius: 15px;
     padding: 5px;
     display: flex;
     align-items: center;
@@ -192,6 +195,11 @@ main .Personajes article img{
     width: 76px;
     border-radius: 35px;
     text-align: center;
-    border: 1px solid var(--SecondaryColor);
+    border: 2px solid var(--FontColor);
+    cursor: pointer;
     transition: .1s linear;
+}
+main .Personajes article:nth-child(2) div img:hover{
+    border: 2px solid var(--HoverColor);
+    padding: 5px;
 }
